--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "window-size": "^1.1.1"
   },
   "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-config-google": "^0.14.0",
     "jsdoc": "^4.0.0"
   }
 }
